--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,3 +7,5 @@ Depends: R (>= 3.3.3)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+URL: https://github.com/christophergandrud/MyPackage
+BugReports: https://github.com/christophergandrud/MyPackage/issues
